# ai-orbitdock

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  MISSION.md  Makefile  README.md  WORKFLOW.md  blog-post-draft.md  package.json  wrangler.toml
orbitdock-server/: Cargo.toml  README.md  build-universal.sh  install.sh  package-release-assets.sh
orbitdock-server/.cargo/: config.toml
orbitdock-server/crates/cli/: Cargo.toml
orbitdock-server/crates/cli/src/: cli.rs  dev_console.rs  error.rs  lib.rs  main.rs
orbitdock-server/crates/cli/src/client/: config.rs  mod.rs  rest.rs  ws.rs
orbitdock-server/crates/cli/src/commands/: approval.rs  codex.rs  config.rs  fs.rs  health.rs  mcp.rs  mcp_mission_tools.rs  mission.rs  mod.rs  model.rs  review.rs  server.rs  session.rs  shell.rs  usage.rs  worktree.rs
orbitdock-server/crates/cli/src/output/: human.rs  json.rs  mod.rs
orbitdock-server/crates/connector-claude/: Cargo.toml
orbitdock-server/crates/connector-claude/src/: lib.rs  session.rs
orbitdock-server/crates/connector-codex/: Cargo.toml
orbitdock-server/crates/connector-codex/prompts/: external_model_instructions.md
orbitdock-server/crates/connector-codex/src/: auth.rs  config.rs  lib.rs  rollout_parser.rs  runtime.rs  session.rs  session_ops.rs  tests.rs  timeline.rs  workers.rs
orbitdock-server/crates/connector-codex/src/event_mapping/: approvals.rs  capabilities.rs  collab.rs  guardian.rs  lifecycle.rs  messages.rs  mod.rs  runtime_signals.rs  streaming.rs  tools.rs
orbitdock-server/crates/connector-codex/tests/: eventmsg_coverage.rs
orbitdock-server/crates/connector-core/: Cargo.toml
orbitdock-server/crates/connector-core/src/: error.rs  event.rs  lib.rs  transition.rs
orbitdock-server/crates/connectors/: Cargo.toml
orbitdock-server/crates/connectors/src/: claude.rs  codex.rs  lib.rs
orbitdock-server/crates/protocol/: Cargo.toml
orbitdock-server/crates/protocol/src/: client.rs  control_deck.rs  diff_merge.rs  lib.rs  server.rs  types.rs
orbitdock-server/crates/protocol/src/conversation_contracts/: activity_groups.rs  approvals.rs  mod.rs  render_hints.rs  rows.rs  tool_display.rs  tool_payloads.rs  workers.rs
orbitdock-server/crates/protocol/src/domain_events/: approvals.rs  conversation.rs  lifecycle.rs  mod.rs  tooling.rs  workers.rs
orbitdock-server/crates/protocol/src/grouping/: grouping_keys.rs  mod.rs  planner.rs  summaries.rs
orbitdock-server/crates/protocol/src/provider_normalization/: claude.rs  codex.rs  mod.rs  shared.rs
orbitdock-server/crates/server/: Cargo.toml  build.rs
orbitdock-server/crates/server/src/: auth.rs  auth_tokens.rs  claude_session.rs  cmd_doctor.rs  cmd_ensure_path.rs  cmd_hook_forward.rs  cmd_init.rs  cmd_install_hooks.rs  cmd_install_service.rs  cmd_pair.rs  cmd_remote_setup.rs  cmd_setup.rs  cmd_status.rs  cmd_tunnel.rs  codex_session.rs  git.rs  git_refresh.rs  hook_handler.rs  http_api.rs  images.rs  lib.rs  main.rs  migration_runner.rs  normalization.rs  paths.rs  persistence.rs  rollout_watcher.rs  session.rs  session_command.rs  session_command_handler.rs  session_history.rs  session_utils.rs  shell.rs  snapshot_compaction.rs  state.rs  transition.rs  usage_probe.rs  websocket.rs  worktree.rs  worktree_include.rs  (+1 more)
orbitdock-server/crates/server/src/admin/: bind_guard.rs  doctor.rs  ensure_path.rs  hook_forward.rs  init.rs  install_hooks.rs  install_service.rs  mod.rs  pair.rs  remote_setup.rs  setup.rs  status.rs  tunnel.rs  upgrade.rs  upgrade_executor.rs
orbitdock-server/crates/server/src/app/: mod.rs
orbitdock-server/crates/server/src/connectors/: claude_session.rs  codex_session.rs  hook_handler.rs  jsonl_tailer.rs  mod.rs  rollout_watcher.rs  subagent_parser.rs
orbitdock-server/crates/server/src/domain/: codex_tools.rs  control_deck.rs  instructions.rs  mod.rs
orbitdock-server/crates/server/src/http_api/: files.rs  permissions.rs  review_comments.rs  router.rs  session_actions.rs  session_lifecycle.rs  sessions.rs  worktrees.rs
orbitdock-server/crates/server/src/infrastructure/: auth.rs  auth_tokens.rs  crypto.rs  daytona.rs  housekeeping.rs  images.rs  logging.rs  metrics.rs  migration_runner.rs  mod.rs  paths.rs  protocol_compat.rs  shell.rs  terminal.rs  usage_probe.rs
orbitdock-server/crates/server/src/persistence/: config.rs  transcripts.rs  worktrees.rs
orbitdock-server/crates/server/src/runtime/: approval_dispatch.rs  codex_config.rs  control_deck.rs  conversation_policy.rs  message_dispatch.rs  message_dispatch_policy.rs  mission_dispatch.rs  mission_orchestrator.rs  mission_reconciliation.rs  mod.rs  query_fallback_policy.rs  restored_sessions.rs  server_info.rs  session_activation.rs  session_actor.rs  session_broadcasts.rs  session_command_handler.rs  session_commands.rs  session_creation.rs  session_direct_start.rs  session_fork_policy.rs  session_fork_runtime.rs  session_fork_targets.rs  session_lifecycle_policy.rs  (+11 more)
orbitdock-server/docker/: linux-release.Dockerfile
orbitdock-server/docs/: API.md  SPEC.md  api-transport-split.md  claude-agent-sdk-0.2.62-source-audit.md  claude-agent-sdk-version.json  claude-connector-parity.md  conversation-contracts.md  package-lock.json  package.json  server-architecture.md  session-architecture.md  token-context-architecture.md
orbitdock-server/migrations/: V002__message_images.sql  V004__claude_models.sql  V008__approval_version.sql  V010__worktree_support.sql  V015__approval_history_question.sql  V020__approval_history_request_permissions.sql  V023__rollout_checkpoints.sql  V024__approval_elicitation_network.sql  V027__mission_name.sql  V031__codex_config_mode_profile_provider.sql  V032__mission_issue_pr_url.sql  V033__last_progress_at.sql  V034__mission_tracker_credentials.sql  V035__turn_status.sql  V036__session_lifecycle_state.sql  V037__session_control_mode.sql  V038__workspace_sync.sql  V039__block_claude_direct_shadow_sessions.sql  V040__unique_claude_direct_owner.sql  V041__drop_rollout_checkpoints.sql  V042__drop_legacy_message_columns.sql  V043__usage_ledger.sql  V044__sync_outbox.sql
(+1661 files in other folders)
