[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/protocol",
    "crates/connectors",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert DeLuca"]

[workspace.dependencies]
# Codex direct integration (OSS: https://github.com/openai/codex)
codex-core = { git = "https://github.com/openai/codex", rev = "4ee0397" }
codex-protocol = { git = "https://github.com/openai/codex", rev = "4ee0397" }
codex-arg0 = { git = "https://github.com/openai/codex", rev = "4ee0397" }
codex-login = { git = "https://github.com/openai/codex", rev = "4ee0397" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Encoding
base64 = "0.22"

# Crypto
ring = "0.17"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
bytes = "1"
notify = "7"
arc-swap = "1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
libc = "0.2"

# Internal crates
orbitdock-protocol = { path = "crates/protocol" }
orbitdock-connectors = { path = "crates/connectors" }

# Patches required by codex-core transitive dependencies
[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/JakkuSakura/tokio-tungstenite", rev = "2ae536b0de793f3ddf31fc2f22d445bf1ef2023d" }

[patch."ssh://git@github.com/JakkuSakura/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/JakkuSakura/tungstenite-rs", rev = "f514de8644821113e5d18a027d6d28a5c8cc0a6e" }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
strip = true
