[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/protocol",
    "crates/connector-core",
    "crates/connector-claude",
    "crates/connector-codex",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert DeLuca"]

[workspace.dependencies]
# Codex direct integration (OSS: https://github.com/openai/codex)
codex-core = { git = "https://github.com/openai/codex", tag = "rust-v0.106.0" }
codex-protocol = { git = "https://github.com/openai/codex", tag = "rust-v0.106.0" }
codex-arg0 = { git = "https://github.com/openai/codex", tag = "rust-v0.106.0" }
codex-login = { git = "https://github.com/openai/codex", tag = "rust-v0.106.0" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Encoding
base64 = "0.22"

# Crypto
ring = "0.17"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
bytes = "1"
notify = "7"
arc-swap = "1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
libc = "0.2"
qrcode = "0.14"

# Internal crates
orbitdock-protocol = { path = "crates/protocol" }
orbitdock-connector-core = { path = "crates/connector-core" }
orbitdock-connector-claude = { path = "crates/connector-claude" }
orbitdock-connector-codex = { path = "crates/connector-codex" }

# Patches required by codex-core transitive dependencies
[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[profile.dev]
debug = 0
incremental = false
split-debuginfo = "off"

[profile.test]
debug = 0
incremental = false
split-debuginfo = "off"

[profile.dev.package."*"]
opt-level = 0

[profile.test.package."*"]
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
strip = true
