[package]
name = "orbitdock-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OrbitDock CLI - interact with AI coding sessions from the terminal"

[[bin]]
name = "orbitdock"
path = "src/main.rs"

[dependencies]
orbitdock-protocol = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["connect", "handshake"] }
comfy-table = "7"
console = "0.15"
toml = "0.8"
futures = { workspace = true }
urlencoding = "2"
clap_complete = "4"
