[package]
name = "orbitdock-connector-claude"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Claude CLI connector for OrbitDock"

[dependencies]
orbitdock-protocol = { workspace = true }
orbitdock-connector-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
