[package]
name = "orbitdock-connector-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Codex connector for OrbitDock"

[dependencies]
orbitdock-protocol = { workspace = true }
orbitdock-connector-core = { workspace = true }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
toml = "0.9"
