[package]
name = "orbitdock-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared protocol types for OrbitDock server and clients"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
uuid = { workspace = true }
