[package]
name = "orbitdock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OrbitDock — mission control for AI coding agents"

[[bin]]
name = "orbitdock"
path = "src/main.rs"

[dependencies]
orbitdock-protocol = { workspace = true }
orbitdock-connector-core = { workspace = true }
orbitdock-connector-claude = { workspace = true }
orbitdock-connector-codex = { workspace = true }
orbitdock-cli = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
libc = { workspace = true }
qrcode = { workspace = true }
console = "0.15"
clap_complete = "4"
refinery = { version = "0.9.0", features = ["rusqlite-bundled"] }

[dev-dependencies]
tempfile = "3"
