[package]
name = "orbitdock-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OrbitDock — mission control for AI coding agents"

[dependencies]
orbitdock-protocol = { workspace = true }
orbitdock-connector-core = { workspace = true }
orbitdock-connector-claude = { workspace = true }
orbitdock-connector-codex = { workspace = true }
codex-core = { workspace = true }
codex-protocol = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
notify = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
rust-embed = { workspace = true }
mime_guess = "2"
dirs = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
libc = { workspace = true }
nix = { version = "0.29", features = ["term", "process", "signal", "ioctl", "fs"] }
qrcode = { workspace = true }
console = "0.15"
clap_complete = "4"
refinery = { version = "0.9.0", features = ["rusqlite-bundled"] }
liquid = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
